--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ ul {
 
 .contact {
   max-width: 80%;
-  margin: 0;
+  margin: 50px 0;
   padding: 2.5% 10%;
   text-align: center
 }
@@ -196,6 +196,7 @@ a {
     margin: 0 5% 0 0;
     display: inline-block;
     max-width: 40%;
+    max-height: 200px;
   }
   
   .summary p {
@@ -212,16 +213,24 @@ a {
   .gallery ul {
     padding: 0;
     margin: 0;
+    height: 1375px;
   }
 
   .gallery li {
     display: inline-block;
     max-width: 47.5%;
+    
    }
 
   .gallery li img {
     max-width: 95%;
+    margin: 0;
+    padding: 0;
   }
+
+.gallery-item {
+  margin: 5px;
+}
 
   .footer-list {
     margin: 0;
@@ -274,8 +283,8 @@ a {
   margin-top: 0;
   height: 250px;
 }
-.summary img {
-  max-height: 90%;
+  .summary img {
+   max-height: 250px;
 }
 
   .summary p {
@@ -288,12 +297,12 @@ a {
 /* Gallery Styling on large */
 
   .gallery ul {
+    height: 1100px;
     padding: 0;
     margin: 0;
   }
 
   .gallery li {
-    box-sizing: border-box;
     display: inline-block;
     max-width: 32.5%;
     padding: 2.5% 0;
